--- a/electron-agent/package.json
+++ b/electron-agent/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "electron-agent-ninja",
+  "name": "electron-agent",
   "version": "1.0.0",
-  "description": "Stealthy Electron agent for remote command execution.",
+  "description": "Electron agent for remote screenshot and status reporting",
   "main": "main.js",
-  "author": "",
-  "license": "MIT",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build:win": "electron-builder --win",
+    "build:mac": "electron-builder --mac",
+    "build:linux": "electron-builder --linux"
+  },
+  "build": {
+    "appId": "com.example.electronagent",
+    "productName": "ElectronAgent",
+    "files": [
+      "main.js",
+      "node_modules/**"
+    ],
+    "extraResources": [],
+    "win": {},
+    "mac": {},
+    "linux": {}
   },
   "dependencies": {
-    "ws": "^8.16.0",
-    "screenshot-desktop": "^1.14.0"
+    "electron": "^28.0.0",
+    "ws": "^8.0.0",
+    "screenshot-desktop": "^2.0.0"
   },
   "devDependencies": {
-    "electron": "^29.0.0"
+    "electron-builder": "^24.0.0"
   }
 }
